--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
     grid-template-columns: repeat(2, 1fr) !important;
     grid-template-rows: repeat(2, 1fr) !important; } }
 
+@media only screen and (max-width: 1002px) {
+  .semiContacto p {
+    text-align: center; } }
+
 @media only screen and (max-width: 992px) {
   .hide1 {
     display: none; } }
@@ -14,7 +18,16 @@
       grid-template-columns: 1fr !important;
       place-items: center; }
       .comicTituloPadre .comicMain .cardDescripcion {
-        max-width: 360px; } }
+        max-width: 360px; }
+  .sobreNosDos {
+    display: grid !important;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    place-items: center; }
+    .sobreNosDos .ofrecemos {
+      margin: 1rem; }
+  .redesSociales {
+    border-bottom: 1px solid #dee2e6; } }
 
 @media only screen and (max-width: 575px) {
   .mapaG,
@@ -23,7 +36,11 @@
   .comicMain img {
     width: 300px; }
   .footerGrid {
-    grid-template-rows: 1fr !important; } }
+    grid-template-rows: 1fr !important; }
+  .contenedorSobreNos {
+    padding: 1rem; }
+    .contenedorSobreNos img {
+      width: 300px; } }
 
 .tendencias, .recienAgregados {
   padding: 1.5rem;
@@ -49,44 +66,24 @@ header {
 
 main {
   margin-top: 120px; }
-  main .comicTituloPadre {
-    max-width: 700px;
-    border: 1px solid #dee2e6;
-    padding-bottom: 1rem; }
-    main .comicTituloPadre .comicTitulo {
-      padding-top: 1rem;
-      text-align: center; }
-    main .comicTituloPadre .comicMain {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr); }
-      main .comicTituloPadre .comicMain .cardTitleImg {
-        width: 400px;
-        padding: 1rem; }
-        main .comicTituloPadre .comicMain .cardTitleImg img {
-          border-radius: 5px;
-          box-shadow: 2px 2px 5px #3f3f3f;
-          width: 368px; }
-      main .comicTituloPadre .comicMain .card-body .cardTitulo {
+  main .comicMain {
+    display: flex;
+    justify-content: center; }
+    main .comicMain .card {
+      text-align: center;
+      width: 400px;
+      padding: 2rem; }
+      main .comicMain .card .comicTitulo {
+        margin-bottom: 1.5rem; }
+      main .comicMain .card img {
+        width: x; }
+      main .comicMain .card .cardTitulo {
         font-size: 20px; }
-      main .comicTituloPadre .comicMain .card-body .cardDescripcion {
-        max-width: 300px;
-        margin: auto; }
-      main .comicTituloPadre .comicMain .card-body .cardLinks a {
-        display: block;
-        text-align: center; }
-  main .comicsRelacionadosContenedor {
-    border-top: 1px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    margin: 3rem 0rem 0rem 0rem; }
-    main .comicsRelacionadosContenedor .comicsRelacionadosTitulo {
-      padding: 1.5rem 0rem 1rem 0rem;
-      text-align: center; }
-    main .comicsRelacionadosContenedor .comicsRelacionados {
-      display: flex;
-      justify-content: center; }
-      main .comicsRelacionadosContenedor .comicsRelacionados img:hover {
-        transform: scale(102%);
-        transition: 0.3s; }
+      main .comicMain .card .cardDescripcion {
+        font-size: x; }
+      main .comicMain .card .cardLinks {
+        display: flex;
+        flex-direction: column; }
   main .tituloPersonajes,
   main .tituloEditoriales {
     font-size: 35px;
@@ -176,67 +173,87 @@ main {
   main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos {
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 3rem;
-    border-bottom: 1px solid #dee2e6; }
+    flex-wrap: wrap; }
+    main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos img {
+      border-radius: 20px;
+      padding-bottom: 3rem; }
     main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno {
-      padding: 3rem; }
+      padding-bottom: 3rem; }
       main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno h1 {
-        font-size: 15px;
-        letter-spacing: 5px; }
+        letter-spacing: 8px;
+        font-size: 15px; }
       main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno h2 {
         font-size: 30px; }
       main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno p {
-        max-width: 500px;
-        margin: 0px; }
-      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno #necesitasAyuda {
+        margin: 0px;
+        max-width: 500px; }
+      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno .h2NecesitasAyuda {
         font-size: 20px;
-        padding-bottom: 10px; }
+        margin-bottom: 1.3rem; }
       main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno a {
-        border-radius: 5px;
+        border-radius: 10px;
+        padding: 0.5rem 2.5rem;
         background-color: #ff4835;
-        padding: 0.5rem 3rem;
         color: white;
         text-decoration: none; }
-        main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .sobreNosUno a:hover {
-          background-color: #ff6d5d; }
-    main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes {
-      border: 1px solid #dee2e6;
-      margin-top: 200px;
-      padding: 1rem;
-      border-radius: 10px; }
-      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes h2 {
-        margin: 0rem 0rem 1rem 0rem; }
-      main .sobreNosotros .sobreNosotrosPadre .contenedorSobreNos .preguntasFrecuentes div {
-        border-bottom: 1px solid #dee2e6;
-        border-top: 1px solid #dee2e6;
-        padding: 1rem; }
   main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre {
-    padding: 1rem 0rem 3rem 0rem;
-    border: 1px solid #dee2e6; }
+    padding: 1.5rem 0rem 3rem 0rem;
+    border: 1px solid #dee2e6;
+    background-color: #f7f6f6; }
     main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .tituloSobreNosDos {
       text-align: center;
-      padding: 1rem; }
+      padding-bottom: 1.5rem;
+      letter-spacing: 3px;
+      font-size: 30px; }
     main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos {
       display: flex;
       justify-content: space-evenly; }
       main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos {
-        background-color: red;
-        padding: 1rem; }
-        main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos h3 {
+        max-height: 300px;
+        padding: 1rem;
+        border-radius: 5px;
+        background-color: white;
+        border: 1px solid #dee2e6; }
+        main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos i {
           font-size: x; }
+        main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos h3 {
+          font-size: 25px; }
         main .sobreNosotros .sobreNosotrosPadre .sobreNosDosPadre .sobreNosDos .ofrecemos p {
-          max-width: 300px; }
+          max-width: 200px; }
   main .sobreNosotros .sobreNosotrosPadreDos {
     display: flex;
     justify-content: space-evenly;
-    padding: 2rem;
+    flex-wrap: wrap;
+    border: 1px solid #dee2e6; }
+    main .sobreNosotros .sobreNosotrosPadreDos .redesSociales {
+      padding: 3rem; }
+      main .sobreNosotros .sobreNosotrosPadreDos .redesSociales .iconsRedes {
+        text-align: center;
+        font-size: 2.5rem;
+        padding-top: 1rem; }
+        main .sobreNosotros .sobreNosotrosPadreDos .redesSociales .iconsRedes i {
+          margin: 0rem 0.4rem; }
+    main .sobreNosotros .sobreNosotrosPadreDos .semiContacto {
+      padding: 3rem; }
+      main .sobreNosotros .sobreNosotrosPadreDos .semiContacto h3 {
+        padding-bottom: 1rem;
+        text-align: center; }
+      main .sobreNosotros .sobreNosotrosPadreDos .semiContacto p {
+        max-width: 400px; }
+  main .sobreNosotros .sobreNosotrosPadreTres {
+    padding: 1.5rem 0rem 3rem 0rem;
     border-bottom: 1px solid #dee2e6; }
-    main .sobreNosotros .sobreNosotrosPadreDos .redesSociales .iconsRedes {
-      text-align: center;
-      font-size: 2rem;
-      padding-top: 1rem; }
-    main .sobreNosotros .sobreNosotrosPadreDos .semiContacto p {
-      max-width: 400px; }
+    main .sobreNosotros .sobreNosotrosPadreTres .preguntasFrecuentes {
+      padding: 1rem; }
+      main .sobreNosotros .sobreNosotrosPadreTres .preguntasFrecuentes h3 {
+        padding-bottom: 1.5rem;
+        font-size: 30px;
+        letter-spacing: 4px; }
+      main .sobreNosotros .sobreNosotrosPadreTres .preguntasFrecuentes div {
+        border-top: 1px solid #dee2e6;
+        border-bottom: 1px solid #dee2e6;
+        padding: 1rem;
+        background-color: #f7f6f6; }
 
 .demo {
   width: 100%;
