--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -56,8 +56,83 @@ header {
 
 main {
     margin-top: 120px;
-
-    //estaria bueno darle un efecto a este h1 de sobre nos
+    .comicsRelacionados {
+        padding: 3rem 0rem;
+        border: $border;
+        h3 {
+            text-align: center;
+            letter-spacing: 5px;
+            padding-bottom: 2rem;
+        }
+        .comicsRelacionadosImg {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            place-content: center;
+            place-items: center;
+            padding: 0rem 15rem 3rem 15rem;
+            gap: 3rem;
+            img {
+                padding: 1rem;
+                border-radius: 0.25rem;
+                box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+                &:hover {
+                    transform: scale(102%);
+                    transition: 0.3s;
+                }
+            }
+        }
+    }
+    .instruccionesContainer {
+        display: flex;
+        justify-content: space-evenly;
+        padding-bottom: 5rem;
+        .instruccionesUno {
+            padding: 2rem;
+            border: $border;
+            border-radius: 5px;
+            h1 {
+                text-align: center;
+                letter-spacing: 5px;
+                padding-bottom: 1rem;
+                font-size: 30px;
+            }
+            ol {
+                li {
+                    max-width: 600px;
+                }
+            }
+            h2 {
+                font-size: 20px;
+            }
+            .iframeVid {
+                border-radius: 10px;
+                margin: 0rem 0rem 1rem 0rem;
+            }
+            .iconsRedesInstrucciones {
+                text-align: center;
+                i {
+                    font-size: 2rem;
+                    color: black;
+                    padding: 3rem;
+                    &:hover {
+                        color: rgb(84, 84, 84);
+                    }
+                }
+            }
+        }
+        .instruccionesDos {
+            padding: 2rem;
+            margin-top: 5rem;
+            h3 {
+                letter-spacing: 5px;
+                font-size: 20px;
+            }
+            img {
+                margin: 0rem 1rem 1rem 0rem;
+                border-radius: 5px;
+            }
+        }
+    }
     .comicMain {
         display: flex;
         justify-content: center;
@@ -217,7 +292,6 @@ main {
         border-top: $border;
     }
 
-    //inicio sobre nosotros
     .sobreNosotros {
         .sobreNosotrosPadre {
             .contenedorSobreNos {
@@ -257,6 +331,9 @@ main {
                         background-color: $color-principal;
                         color: white;
                         text-decoration: none;
+                        &:hover {
+                            background-color: $color-hover;
+                        }
                     }
                 }
             }
@@ -312,9 +389,12 @@ main {
                     text-align: center;
                     font-size: 2.5rem;
                     padding-top: 1rem;
-
                     i {
                         margin: 0rem 0.4rem;
+                        color: black;
+                        &:hover {
+                            color: rgb(84, 84, 84);
+                        }
                     }
                 }
             }
@@ -389,6 +469,9 @@ h2 {
 .tendencias {
     border-bottom: $border;
     @extend %padding;
+    h1 {
+        letter-spacing: 5px;
+    }
 
     .tendencias1,
     .tendencias2 {
@@ -405,6 +488,9 @@ h2 {
 
 .recienAgregados {
     @extend %padding;
+    h2 {
+        letter-spacing: 5px;
+    }
 
     .recienAgregados1,
     .recienAgregados2 {
@@ -423,6 +509,13 @@ h2 {
     background-color: map-get($map: $bg-color, $key: color1);
     padding: 4rem;
     box-shadow: $shadow;
+    a {
+        text-decoration: none;
+        letter-spacing: 5px;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .formIframe {
