--- a/css/main.css
+++ b/css/main.css
@@ -1,68 +1,3 @@
-@media only screen and (max-width: 1251px) {
-  .comicsRelacionadosImg {
-    grid-template-columns: repeat(2, 1fr) !important;
-    margin: 0rem 15rem; } }
-
-@media only screen and (max-width: 1221px) {
-  .instruccionesDosHide {
-    display: none; } }
-
-@media only screen and (max-width: 1200px) {
-  .footerGrid {
-    grid-template-columns: repeat(2, 1fr) !important;
-    grid-template-rows: repeat(2, 1fr) !important; }
-  .instruccionesDosHide {
-    display: none; } }
-
-@media only screen and (max-width: 1002px) {
-  .semiContacto p {
-    text-align: center; } }
-
-@media only screen and (max-width: 992px) {
-  .comicsRelacionadosImg {
-    margin: 0rem; }
-  .hide1 {
-    display: none; }
-  .instruccionesDos {
-    display: none; } }
-
-@media only screen and (max-width: 768px) {
-  .iframeVid {
-    width: 400px; }
-  .comicsRelacionadosImg img {
-    width: 250px; }
-  .comicTituloPadre {
-    width: 500px; }
-    .comicTituloPadre .comicMain {
-      grid-template-columns: 1fr !important;
-      place-items: center; }
-      .comicTituloPadre .comicMain .cardDescripcion {
-        max-width: 360px; }
-  .sobreNosDos {
-    display: grid !important;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    place-items: center; }
-    .sobreNosDos .ofrecemos {
-      margin: 1rem; }
-  .redesSociales {
-    border-bottom: 1px solid #dee2e6; } }
-
-@media only screen and (max-width: 575px) {
-  .comicsRelacionados {
-    display: none; }
-  .mapaG,
-  .hide2 {
-    display: none; }
-  .comicMain img {
-    width: 300px; }
-  .footerGrid {
-    grid-template-rows: 1fr !important; }
-  .contenedorSobreNos {
-    padding: 1rem; }
-    .contenedorSobreNos img {
-      width: 300px; } }
-
 .tendencias, .recienAgregados {
   padding: 1.5rem;
   margin-top: 1rem; }
@@ -87,10 +22,33 @@ header {
 
 main {
   margin-top: 120px; }
+  main .comicTituloPadre {
+    border: 1px solid #dee2e6;
+    width: fit-content;
+    padding: 3rem;
+    margin-bottom: 3rem; }
+    main .comicTituloPadre .comicTitulo {
+      letter-spacing: 5px;
+      font-size: 30px;
+      margin-bottom: 1.5rem; }
+    main .comicTituloPadre .comicMain {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap; }
+      main .comicTituloPadre .comicMain img {
+        border-radius: 5px;
+        box-shadow: 0.2rem 0.2rem 0.2rem #a6a6a6; }
+      main .comicTituloPadre .comicMain .card-body .cardDescripcion {
+        max-width: 300px;
+        margin: auto; }
+      main .comicTituloPadre .comicMain .card-body .cardLinks {
+        text-align: center; }
+        main .comicTituloPadre .comicMain .card-body .cardLinks a {
+          display: block; }
   main .comicsRelacionados {
     padding: 3rem 0rem;
     border: 1px solid #dee2e6; }
-    main .comicsRelacionados h3 {
+    main .comicsRelacionados h3, main .comicsRelacionados h2 {
       text-align: center;
       letter-spacing: 5px;
       padding-bottom: 2rem; }
@@ -174,7 +132,7 @@ main {
     grid-template-rows: repeat(3, 1fr);
     margin: 2rem 0rem 5rem 0rem;
     place-items: center;
-    gap: 4rem; }
+    gap: 2rem; }
     main .contenedorPersonajes .personajesCard {
       display: flex;
       justify-content: center;
@@ -182,9 +140,8 @@ main {
       border: 1px solid #dee2e6;
       border-radius: 5px;
       text-align: center;
+      margin: 2rem 0rem;
       max-height: 481px; }
-      main .contenedorPersonajes .personajesCard img {
-        width: 200px; }
       main .contenedorPersonajes .personajesCard h2 {
         margin: auto;
         font-size: 24px; }
@@ -210,10 +167,7 @@ main {
     border-bottom: 1px solid #dee2e6; }
     main .padreEditoriales .contenedorEditoriales {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      margin: 0rem 0rem 3rem 0rem;
-      gap: 4rem;
+      grid-template-columns: repeat(4, 0.5fr);
       place-items: center; }
       main .padreEditoriales .contenedorEditoriales .editorialCard {
         display: flex;
@@ -222,7 +176,8 @@ main {
         border: 1px solid #dee2e6;
         border-radius: 5px;
         text-align: center;
-        max-height: x; }
+        max-width: 250px;
+        margin-bottom: 3rem; }
       main .padreEditoriales .contenedorEditoriales .tituloEditorialCard {
         font-size: 24px;
         margin-top: 5px; }
@@ -441,3 +396,98 @@ h2 {
     display: block; }
     .footerGrid .linkRedes:hover {
       text-decoration: underline; }
+
+@media only screen and (min-width: 2000px) {
+  .contenedorPersonajes {
+    grid-template-columns: repeat(5, 1fr) !important;
+    grid-template-rows: repeat(2, 1fr) !important; }
+  .hideCard {
+    display: none !important; } }
+
+@media only screen and (max-width: 1251px) {
+  .comicsRelacionadosImg {
+    grid-template-columns: repeat(2, 1fr) !important;
+    margin: 0rem 15rem; } }
+
+@media only screen and (max-width: 1221px) {
+  .instruccionesDosHide {
+    display: none; } }
+
+@media only screen and (max-width: 1200px) {
+  .footerGrid {
+    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-rows: repeat(2, 1fr) !important; }
+  .instruccionesDosHide {
+    display: none; } }
+
+@media only screen and (max-width: 1002px) {
+  .semiContacto p {
+    text-align: center; } }
+
+@media only screen and (max-width: 992px) {
+  .contenedorPersonajes {
+    grid-template-columns: repeat(3, 1fr) !important; }
+  .contenedorEditoriales {
+    grid-template-columns: repeat(3, 1fr) !important; }
+  .comicsRelacionadosImg {
+    margin: 0rem; }
+  .hide1 {
+    display: none; }
+  .instruccionesDos {
+    display: none; } }
+
+@media only screen and (max-width: 830px) {
+  .cardDescripcion {
+    max-width: 400px !important;
+    padding-bottom: 0.5rem; }
+  .comicTitulo {
+    text-align: center; } }
+
+@media only screen and (max-width: 768px) {
+  .contenedorEditoriales {
+    grid-template-columns: repeat(2, 1fr) !important; }
+  .editorialCard a {
+    width: 200px; }
+    .editorialCard a img {
+      width: 200px; }
+  .contenedorPersonajes {
+    grid-template-columns: repeat(2, 1fr) !important; }
+    .contenedorPersonajes .personajesCard a {
+      width: 150px; }
+      .contenedorPersonajes .personajesCard a img {
+        width: 150px; }
+  .iframeVid {
+    width: 400px; }
+  .comicsRelacionadosImg img {
+    width: 250px; }
+  .comicTituloPadre {
+    width: 500px; }
+    .comicTituloPadre .comicMain {
+      grid-template-columns: 1fr !important;
+      place-items: center; }
+      .comicTituloPadre .comicMain .cardDescripcion {
+        max-width: 360px; }
+  .sobreNosDos {
+    display: grid !important;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    place-items: center; }
+    .sobreNosDos .ofrecemos {
+      margin: 1rem; }
+  .redesSociales {
+    border-bottom: 1px solid #dee2e6; } }
+
+@media only screen and (max-width: 575px) {
+  .comicsRelacionados {
+    display: none; }
+  .mapaG,
+  .hide2 {
+    display: none; }
+  .comicMain img {
+    width: 290px; }
+  .footerGrid {
+    grid-template-rows: 1fr !important; }
+  .contenedorSobreNos {
+    padding: 1rem; }
+    .contenedorSobreNos img {
+      display: none; } }
