--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -347,8 +347,7 @@ main {
                 flex-wrap: wrap;
 
                 img {
-                    border-radius: 20px;
-                    padding-bottom: 3rem;
+                    margin-bottom: 3rem;
                 }
 
                 .sobreNosUno {
