--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,6 +1,6 @@
-$color-principal: #ff4835;
+$color-principal: #ed372a;
 
-$color-hover: #ff6d5d;
+$color-hover: #ff4835;
 
 $border: 1px solid #dee2e6;
 
